--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+ul {
+    list-style-type: none;
+    margin: 10;
+    padding: 10;
+    background-color: rgb(70, 63, 63);
+    display: flex;
+
+}
+
+li {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
 section {
     color: rgb(107, 101, 101);
 }
@@ -10,6 +25,11 @@ h1 {
     font-size: 50px;
     font-weight: 900;
 
+}
+
+h2 {
+    font-weight: 700px;
+    font-size: x-large;
 }
 
 a {
@@ -60,6 +80,10 @@ span {
     margin-right: 100px;
 }
 
+.about p {
+    color: black;
+}
+
 .person {
     margin-top: 88px;
     margin-left: 170px;
@@ -81,6 +105,7 @@ span {
 
     margin-left: 15%;
     margin-right: 15%;
+    color: black;
 }
 
 .menu {
@@ -89,6 +114,7 @@ span {
     border-radius: 5%;
     margin-left: 5%;
     padding: 15px 15px 15px 15px;
+    color: black;
 }
 
 .menu img {
@@ -112,8 +138,9 @@ h3 {
 
 .follower {
     color: black;
-    padding-right: 50px;
+    padding-left: 50px;
 }
+
 
 .follower p {
     margin-top: -50px;
